Added GitHub Pages configuration

--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "heltblank-client",
+  "name": "helt-blank",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://noerpol.github.io/helt-blank",
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
@@ -19,10 +20,12 @@
     "svgo": "^3.3.2"
   },
   "scripts": {
-    "start": "set PORT=3000 && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -41,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
