--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,10 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "openai": "^4.26.0",
     "socket.io": "^4.7.4"
   },
   "devDependencies": {
